--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "5.3.3" %}
+{% set version = "5.4.1" %}
 {% set variant = "openblas" %}
 
 package:
@@ -8,10 +8,10 @@ package:
 source:
   fn: gmt-{{ version }}-src.tar.gz
   url: ftp://ftp.soest.hawaii.edu/gmt/gmt-{{ version }}-src.tar.gz
-  sha256: b5e592d7482de5dee06268a0a048949f5cf626ef67b0419515ce3d14f4aa82c6
+  sha256: c85541d50b63a5f0809552edb488bb69995b96dd684df77d6328a9eea7ff3ab0
 
 build:
-  number: 1
+  number: 0
   skip: True  # [win or osx]
   features:
     - blas_{{ variant }}
@@ -26,6 +26,7 @@ requirements:
     - hdf5 1.8.17|1.8.17.*
     - zlib 1.2.*
     - blas 1.1 {{ variant }}
+    - curl
   run:
     - fftw
     - gdal 2.1.*
@@ -34,6 +35,7 @@ requirements:
     - hdf5 1.8.17|1.8.17.*
     - zlib 1.2.*
     - blas 1.1 {{ variant }}
+    - curl
 
 test:
   commands:
