--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,8 +11,8 @@ source:
   sha256: 288509d28ed062ddf8b08212f65afb3aa07762a9a84bc5da9f7132016c8dd31f
 
 build:
-  number: 0
-  skip: True  # [win or osx]
+  number: 1
+  skip: True  # [win]
   features:
     - blas_{{ variant }}
 
