--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,7 +44,7 @@ test:
     - gmt psbasemap -R10/70/-3/8 -JX4i/3i -Ba -B+glightred+t"TEST" -P > test0.ps  # [not win]
     - gmt pscoast -Vd -R0/5/0/5 -JM5i -P -W0.25p > test1.ps  # [not win]
     - gmt pscoast -R-130/-70/24/52 -JB-100/35/33/45/6i -Ba -B+t"Conic Projection" -N1/thickest -N2/thinnest -A500 -Ggray -Wthinnest -P > test2.ps
-    - gmt begin; gmt pscoast -Vd -R0/5/0/5 -JM5i -P -W0.25p; gmt end  # [not win]
+    - bash run_test.sh  # [not win]
     - conda inspect linkages -p $PREFIX gmt  # [not win]
     - conda inspect objects -p $PREFIX gmt  # [osx]
 
