--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,7 @@ requirements:
     - curl
     - pcre
     - gshhg-gmt
+    - dcw-gmt
     - vc 9  # [win and py27]
     - vc 10  # [win and py34]
     - vc 14  # [win and (py35 or py36)]
@@ -49,6 +50,7 @@ requirements:
     - curl
     - pcre
     - gshhg-gmt
+    - dcw-gmt
     - vc 9  # [win and py27]
     - vc 10  # [win and py34]
     - vc 14  # [win and (py35 or py36)]
