--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: 288509d28ed062ddf8b08212f65afb3aa07762a9a84bc5da9f7132016c8dd31f
 
 build:
-  number: 1
+  number: 2
   skip: True  # [win]
   features:
     - blas_{{ variant }}
@@ -29,6 +29,7 @@ requirements:
     - curl
     - pcre
     - gshhg-gmt
+    - dcw-gmt
   run:
     - fftw
     - gdal 2.2.*
@@ -40,6 +41,7 @@ requirements:
     - curl
     - pcre
     - gshhg-gmt
+    - dcw-gmt
 
 test:
   commands:
@@ -53,7 +55,15 @@ about:
   home: http://gmt.soest.hawaii.edu/
   license: LGPL-3.0
   license_file: LICENSE.TXT
-  summary: 'Generic Mapping Tools.'
+  summary: 'The Generic Mapping Tools.'
+  description: |
+      GMT is an open source collection of about 80 command-line tools for
+      manipulating geographic and Cartesian data sets (including filtering,
+      trend fitting, gridding, projecting, etc.) and producing PostScript
+      illustrations ranging from simple x–y plots via contour maps to
+      artificially illuminated surfaces and 3D perspective views; the GMT
+      supplements add another 40 more specialized and discipline-specific
+      tools. GMT supports over 30 map projections and transformations
 
 extra:
   recipe-maintainers:
