--- a/.travis.yml
+++ b/.travis.yml
@@ -53,4 +53,4 @@ install:
 script:
   - conda build ./recipe
 
-  - upload_or_check_non_existence ./recipe conda-forge --channel=main
+  - upload_or_check_non_existence ./recipe conda-forge --channel=dev
