--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 288509d28ed062ddf8b08212f65afb3aa07762a9a84bc5da9f7132016c8dd31f
 
 build:
-  number: 201
+  number: 202
   skip: True  # [win]
   features:
     - blas_{{ variant }}
@@ -22,7 +22,7 @@ requirements:
     - gdal 2.1.*
     - ghostscript
     - libnetcdf 4.4.*
-    - hdf5 1.8.18|1.8.18.*
+    - hdf5 1.10.1
     - zlib 1.2.11
     - blas 1.1 {{ variant }}
     - curl >=7.44.0,<8
@@ -35,7 +35,7 @@ requirements:
     - gdal 2.1.*
     - ghostscript
     - libnetcdf 4.4.*
-    - hdf5 1.8.18|1.8.18.*
+    - hdf5 1.10.1
     - zlib 1.2.11
     - blas 1.1 {{ variant }}
     - curl >=7.44.0,<8
