--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,39 +8,43 @@ package:
 source:
   url: ftp://ftp.soest.hawaii.edu/gmt/gmt-{{ version }}-src.tar.gz
   sha256: 1baf3d6b049db7cc6cbd7506524cdca45c41e3bfffb24814245fc18f5a8626c2
+  patches:
+    - no_matlab.patch
 
 build:
   number: 200
-  skip: True  # [win]
   features:
     - blas_{{ variant }}
 
 requirements:
   build:
     - cmake
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+  host:
     - fftw
-    - gdal 2.2.*
-    - ghostscript
-    - libnetcdf 4.5.*
-    - hdf5 1.10.1
-    - zlib 1.2.11
-    - blas 1.1 {{ variant }}
-    - curl >=7.44.0,<8
+    - gdal
+    # - ghostscript  # [not win]
+    - libnetcdf
+    - hdf5
+    - zlib
+    - blas 1.1 {{ variant }}  # [not win]
+    - curl
     - pcre
-    - openblas 0.2.20|0.2.20.*
+    - openblas
     - gshhg-gmt
     - dcw-gmt
   run:
     - fftw
-    - gdal 2.2.*
-    - ghostscript
-    - libnetcdf >=4.5
-    - hdf5 1.10.1
-    - zlib 1.2.11
-    - blas 1.1 {{ variant }}
-    - curl >=7.44.0,<8
+    - gdal
+    - ghostscript  # [not win]
+    - libnetcdf
+    - hdf5
+    - zlib
+    - blas 1.1 {{ variant }}  # [not win]
+    - curl
     - pcre
-    - openblas 0.2.20|0.2.20.*
+    - openblas
     - gshhg-gmt
     - dcw-gmt
 
