--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
   host:
     - fftw
     - gdal
-    # - ghostscript  # [not win]
+    - ghostscript  # [not win]
     - libnetcdf
     - hdf5
     - zlib
