--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 1baf3d6b049db7cc6cbd7506524cdca45c41e3bfffb24814245fc18f5a8626c2
 
 build:
-  number: 200
+  number: 201
   skip: True  # [win]
   features:
     - blas_{{ variant }}
@@ -18,29 +18,31 @@ build:
 requirements:
   build:
     - cmake
+    - {{ compiler('c') }}
+  host:
     - fftw
-    - gdal 2.2.*
+    - gdal
     - ghostscript
-    - libnetcdf 4.5.*
-    - hdf5 1.10.1
-    - zlib 1.2.11
+    - libnetcdf
+    - hdf5
+    - zlib
     - blas 1.1 {{ variant }}
-    - curl >=7.44.0,<8
+    - curl
     - pcre
-    - openblas 0.2.20|0.2.20.*
+    - openblas
     - gshhg-gmt
     - dcw-gmt
   run:
     - fftw
-    - gdal 2.2.*
+    - gdal
     - ghostscript
-    - libnetcdf >=4.5
-    - hdf5 1.10.1
-    - zlib 1.2.11
+    - libnetcdf
+    - hdf5
+    - zlib
     - blas 1.1 {{ variant }}
-    - curl >=7.44.0,<8
+    - curl
     - pcre
-    - openblas 0.2.20|0.2.20.*
+    - openblas
     - gshhg-gmt
     - dcw-gmt
 
