MNT: Re-rendered with conda-smithy 3.1.12 and pinning 2018.10.31

--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,15 +1,21 @@
 c_compiler:
 - toolchain_c
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 curl:
 - '7.59'
+docker_image:
+- condaforge/linux-anvil
 gdal:
-- '2.2'
+- '2.3'
 hdf5:
-- 1.10.2
+- 1.10.3
 libnetcdf:
 - '4.6'
 openblas:
-- 0.2.20
+- 0.3.3
 pin_run_as_build:
   curl:
     max_pin: x
