--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -2,12 +2,16 @@ MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 c_compiler:
 - toolchain_c
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 curl:
 - '7.59'
 gdal:
-- '2.2'
+- '2.3'
 hdf5:
-- 1.10.2
+- 1.10.3
 libnetcdf:
 - '4.6'
 macos_machine:
@@ -15,7 +19,7 @@ macos_machine:
 macos_min_version:
 - '10.9'
 openblas:
-- 0.2.20
+- 0.3.3
 pin_run_as_build:
   curl:
     max_pin: x
