--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,22 +1,26 @@
 c_compiler:
 - toolchain_c
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 curl:
 - '7.59'
+docker_image:
+- condaforge/linux-anvil
 gdal:
-- '2.2'
+- '2.3'
 hdf5:
-- 1.10.2
+- 1.10.4
 libnetcdf:
 - '4.6'
 openblas:
-- 0.2.20
+- 0.3.3
 pin_run_as_build:
   curl:
     max_pin: x
   gdal:
     max_pin: x.x
-  hdf5:
-    max_pin: x.x.x
   libnetcdf:
     max_pin: x.x
   openblas:
