--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,25 +1,19 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-build_number_decrement:
-- '1000'
 c_compiler:
-- toolchain_c
+- gcc
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 curl:
 - '7.59'
+docker_image:
+- condaforge/linux-anvil-comp7
 gdal:
 - '2.3'
 hdf5:
 - 1.10.4
 libnetcdf:
 - '4.6'
-macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
 openblas:
 - 0.3.3
 pin_run_as_build:
@@ -33,10 +27,5 @@ pin_run_as_build:
     max_pin: x.x.x
   zlib:
     max_pin: x.x
-zip_keys:
-- - c_compiler
-  - channel_sources
-  - channel_targets
-  - build_number_decrement
 zlib:
 - '1.2'
