--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "5.4.4" %}
+{% set version = "5.4.5" %}
 {% set variant = "openblas" %}
 
 package:
@@ -7,10 +7,10 @@ package:
 
 source:
   url: ftp://ftp.soest.hawaii.edu/gmt/gmt-{{ version }}-src.tar.gz
-  sha256: 1baf3d6b049db7cc6cbd7506524cdca45c41e3bfffb24814245fc18f5a8626c2
+  sha256: 225629c7869e204d5f9f1a384c4ada43e243f83e1ed28bdca4f7c2896bf39ef6
 
 build:
-  number: 1201
+  number: 0
   skip: True  # [win]
   features:
     - blas_{{ variant }}
@@ -50,10 +50,9 @@ test:
   commands:
     - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
     - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
-    # Tests are OSX only because of a bug in GMT 5.4.4
-    - gmt defaults -Vd  # [osx]
-    - gmt psbasemap -R10/70/-3/8 -JX4i/3i -Ba -B+glightred+t"TEST" -P -Vd > test0.ps  # [osx]
-    - gmt pscoast -R0/5/0/5 -JM5i -P -W0.25p -Vd > test1.ps  # [osx]
+    - gmt defaults -Vd
+    - gmt psbasemap -R10/70/-3/8 -JX4i/3i -Ba -B+glightred+t"TEST" -P -Vd > test0.ps
+    - gmt pscoast -R0/5/0/5 -JM5i -P -W0.25p -Vd > test1.ps
 
 about:
   home: http://gmt.soest.hawaii.edu/
