MNT: Re-rendered with conda-build 3.16.3, conda-smithy 3.2.9, and conda-forge-pinning 2019.01.21

--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,5 +1,5 @@
 c_compiler:
-- toolchain_c
+- gcc
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -7,9 +7,9 @@ channel_targets:
 curl:
 - '7.59'
 docker_image:
-- condaforge/linux-anvil
+- condaforge/linux-anvil-comp7
 gdal:
-- '2.3'
+- '2.4'
 hdf5:
 - 1.10.4
 libnetcdf:
