--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,7 +1,7 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 c_compiler:
-- toolchain_c
+- clang
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -9,7 +9,7 @@ channel_targets:
 curl:
 - '7.59'
 gdal:
-- '2.3'
+- '2.4'
 hdf5:
 - 1.10.4
 libnetcdf:
