MNT: Re-rendered with conda-build 3.16.3, conda-smithy 3.3.0, and conda-forge-pinning 2019.03.17

--- a/.ci_support/win_c_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015vc14.yaml
@@ -1,5 +1,5 @@
 c_compiler:
-- vs2008
+- vs2015
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -23,7 +23,14 @@ pin_run_as_build:
     max_pin: x.x
   libnetcdf:
     max_pin: x.x.x
+  vc:
+    max_pin: x
   zlib:
     max_pin: x.x
+vc:
+- '14'
+zip_keys:
+- - vc
+  - c_compiler
 zlib:
 - '1.2'
