--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,6 +7,8 @@ package:
 source:
   url: ftp://ftp.soest.hawaii.edu/gmt/gmt-{{ version }}-src.tar.gz
   sha256: 225629c7869e204d5f9f1a384c4ada43e243f83e1ed28bdca4f7c2896bf39ef6
+  patches:
+    - no_matlab.patch
 
 build:
   number: 2
