--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,19 +1,21 @@
 c_compiler:
-- toolchain_c
+- gcc
+c_compiler_version:
+- '7'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 curl:
-- '7.59'
+- '7.64'
 docker_image:
-- condaforge/linux-anvil
+- condaforge/linux-anvil-comp7
 gdal:
-- '2.3'
+- '2.4'
 hdf5:
 - 1.10.4
 libnetcdf:
-- '4.6'
+- 4.6.2
 openblas:
 - 0.3.3
 pin_run_as_build:
@@ -22,7 +24,7 @@ pin_run_as_build:
   gdal:
     max_pin: x.x
   libnetcdf:
-    max_pin: x.x
+    max_pin: x.x.x
   openblas:
     max_pin: x.x.x
   zlib:
