Fix the install dir on Windows (#64)
* Append `gmt` to the install dir on Windows

* Remove datasets as Windows dependencies

They are packaged with the library. Add cmake options to fix the install
path.

* Bump the build number

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
     - no_matlab.patch
 
 build:
-  number: 2
+  number: 3
   skip: true  # [win and vc<14]
   features:
 
@@ -41,8 +41,8 @@ requirements:
     - zlib
     - curl
     - pcre
-    - gshhg-gmt
-    - dcw-gmt
+    - gshhg-gmt  # [not win]
+    - dcw-gmt  # [not win]
 
 test:
   commands:
