MNT: Re-rendered with conda-build 3.18.2, conda-smithy 3.3.6, and conda-forge-pinning 2019.06.06

--- a/.ci_support/win_c_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015vc14.yaml
@@ -3,13 +3,13 @@ c_compiler:
 channel_sources:
 - conda-forge,defaults
 channel_targets:
-- conda-forge main
+- conda-forge dev
 curl:
 - '7.64'
 gdal:
 - '2.4'
 hdf5:
-- 1.10.4
+- 1.10.5
 libblas:
 - 3.8 *netlib
 libcblas:
