MNT: Re-rendered with conda-build 3.17.8, conda-smithy 3.3.7, and conda-forge-pinning 2019.06.18

--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -10,8 +10,12 @@ jobs:
   strategy:
     maxParallel: 4
     matrix:
-      win_c_compilervs2015vc14:
-        CONFIG: win_c_compilervs2015vc14
+      win_c_compilervs2008:
+        CONFIG: win_c_compilervs2008
+        CONDA_BLD_PATH: D:\\bld\\
+        UPLOAD_PACKAGES: False
+      win_c_compilervs2015:
+        CONFIG: win_c_compilervs2015
         CONDA_BLD_PATH: D:\\bld\\
         UPLOAD_PACKAGES: False
   steps:
@@ -68,8 +72,8 @@ jobs:
 
     # Configure the VM.
     - script: |
+        set "CI=azure"
         run_conda_forge_build_setup
-
       displayName: conda-forge build setup
     
 
