Try modern mode test on multiple lines

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,7 +48,9 @@ test:
     - gmt defaults -Vd  # [not linux]
     - gmt psbasemap -R10/70/-3/8 -JX4i/3i -Ba -B+glightred+t"TEST" -P -Vd > test0.ps  # [not linux]
     - gmt pscoast -R0/5/0/5 -JM5i -P -W0.25p -Vd > test1.ps  # [not linux]
-    - gmt begin -Vd; gmt coast -R0/5/0/5 -JM5i -W0.25p -Vd; gmt end  # [not linux]
+    - gmt begin -Vd  # [not linux]
+    - gmt coast -R0/5/0/5 -JM5i -W0.25p -Vd  # [not linux]
+    - gmt end  # [not linux]
 
 about:
   home: https://www.generic-mapping-tools.org
