Update dev release to 6.0.0rc1  (#70)
Enable Windows back on the devel builds.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,16 @@
-{% set version = "6.0.0a19" %}
+{% set version = "6.0.0rc1" %}
 
 package:
   name: gmt
   version: {{ version }}
 
 source:
-  git_url: https://github.com/GenericMappingTools/gmt.git
-  git_rev: 120917b18c9024ef95eaa501c7704820658621af
+  url: https://github.com/GenericMappingTools/gmt/releases/download/{{ version }}/gmt-{{ version }}-src.tar.gz
+  sha256: 156c9aeaff035dc93e9e458c9e639e7f5e09505646ba70407f2210269d6d7240
 
 build:
-  number: 1
-  skip: True  # [win]
+  number: 0
+  skip: True  # [win and vc<14]
 
 requirements:
   build:
@@ -48,9 +48,12 @@ test:
     - gmt defaults -Vd  # [not linux]
     - gmt psbasemap -R10/70/-3/8 -JX4i/3i -Ba -B+glightred+t"TEST" -P -Vd > test0.ps  # [not linux]
     - gmt pscoast -R0/5/0/5 -JM5i -P -W0.25p -Vd > test1.ps  # [not linux]
+    - gmt begin -Vd  # [osx]
+    - gmt coast -R0/5/0/5 -JM5i -W0.25p -Vd  # [osx]
+    - gmt end  # [osx]
 
 about:
-  home: http://gmt.soest.hawaii.edu/
+  home: https://www.generic-mapping-tools.org
   license: LGPL-3.0
   license_file: LICENSE.TXT
   summary: 'The Generic Mapping Tools.'
