Reenable Windows build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,8 +9,8 @@ source:
   sha256: c86556297f5f0b55914ddd861b2976ca80498a9afc7b3c89fdb992ac2a7efefe
 
 build:
-  number: 0
-  skip: True  # [win]
+  number: 1
+  skip: True  # [win and vc<14]
 
 requirements:
   build:
