--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -11,13 +11,15 @@ curl:
 docker_image:
 - condaforge/linux-anvil-comp7
 gdal:
-- '2.4'
+- '3.0'
 hdf5:
 - 1.10.5
 libblas:
 - 3.8 *netlib
 libcblas:
 - 3.8 *netlib
+liblapack:
+- 3.8.0 *netlib
 libnetcdf:
 - 4.6.2
 pin_run_as_build:
