--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -11,13 +11,15 @@ channel_targets:
 curl:
 - '7.64'
 gdal:
-- '2.4'
+- '3.0'
 hdf5:
 - 1.10.5
 libblas:
 - 3.8 *netlib
 libcblas:
 - 3.8 *netlib
+liblapack:
+- 3.8.0 *netlib
 libnetcdf:
 - 4.6.2
 macos_machine:
