--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,7 @@ source:
   sha256: 79aa2f4df975e2d2ab38b6613e52da06040e741368baee8133ebb7e0e0336d09
   patches:
     - 6.0.0rc4-patch-1.patch
+    - 6.0.0rc4-patch-2.patch
 
 build:
   number: 0
