Update GMT5 recipe

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,15 +5,14 @@ package:
   version: {{ version }}
 
 source:
-  url: ftp://ftp.soest.hawaii.edu/gmt/gmt-{{ version }}-src.tar.gz
+  url: https://github.com/GenericMappingTools/gmt/releases/download/{{ version }}/gmt-{{ version }}-src.tar.gz
   sha256: 225629c7869e204d5f9f1a384c4ada43e243f83e1ed28bdca4f7c2896bf39ef6
   patches:
     - no_matlab.patch
 
 build:
-  number: 5
+  number: 6
   skip: true  # [win and vc<14]
-  features:
 
 requirements:
   build:
@@ -25,7 +24,7 @@ requirements:
     - liblapack
     - fftw
     - gdal
-    - ghostscript  # [not win]
+    - ghostscript
     - libnetcdf
     - hdf5
     - zlib
@@ -39,7 +38,7 @@ requirements:
     - liblapack
     - fftw
     - gdal
-    - ghostscript  # [not win]
+    - ghostscript
     - libnetcdf
     - hdf5
     - zlib
@@ -50,14 +49,12 @@ requirements:
 
 test:
   commands:
-    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
-    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
     - gmt defaults -Vd  # [not linux]
     - gmt psbasemap -R10/70/-3/8 -JX4i/3i -Ba -B+glightred+t"TEST" -P -Vd > test0.ps  # [not linux]
-    - gmt pscoast -R0/5/0/5 -JM5i -P -W0.25p -Vd > test1.ps  # [not linux]
+    - gmt pscoast -R0/10/0/10 -JM6i -Ba -Ggray -ENG+p1p,blue -P -Vd > test1.ps  # [not linux]
 
 about:
-  home: http://gmt.soest.hawaii.edu/
+  home: https://www.generic-mapping-tools.org
   license: LGPL-3.0
   license_file: LICENSE.TXT
   summary: 'The Generic Mapping Tools.'
@@ -74,3 +71,4 @@ extra:
   recipe-maintainers:
     - ocefpaf
     - leouieda
+    - seisman
