MNT: Re-rendered with conda-build 3.18.8, conda-smithy 3.4.7, and conda-forge-pinning 2019.09.08

--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -7,7 +7,7 @@ c_compiler_version:
 channel_sources:
 - conda-forge,defaults
 channel_targets:
-- conda-forge main
+- conda-forge gmt5
 curl:
 - '7.64'
 gdal:
