--- a/.ci_support/win_c_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015vc14.yaml
@@ -3,7 +3,7 @@ c_compiler:
 channel_sources:
 - conda-forge,defaults
 channel_targets:
-- conda-forge main
+- conda-forge gmt5
 curl:
 - '7.64'
 gdal:
