Add ffmpeg and graphicsmagick to the run-time dependencies

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,6 +48,8 @@ requirements:
     - pcre
     - gshhg-gmt  # [not win]
     - dcw-gmt  # [not win]
+    - ffmpeg
+    - graphicsmagick  # [not win]
 
 test:
   commands:
