--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,9 +10,10 @@ source:
   patches:
     - 6.0.0rc4-patch-1.patch
     - 6.0.0rc4-patch-2.patch
+    - 6.0.0rc4-patch-3.patch
 
 build:
-  number: 0
+  number: 1
   skip: True  # [win and vc<14]
 
 requirements:
@@ -47,6 +48,8 @@ requirements:
     - pcre
     - gshhg-gmt  # [not win]
     - dcw-gmt  # [not win]
+    - ffmpeg
+    - graphicsmagick  # [not win]
 
 test:
   commands:
