MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.6.0, and conda-forge-pinning 2019.11.01

--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -10,6 +10,8 @@ curl:
 - '7.64'
 docker_image:
 - condaforge/linux-anvil-comp7
+fftw:
+- '3'
 gdal:
 - '3.0'
 hdf5:
@@ -24,6 +26,8 @@ libnetcdf:
 - 4.7.1
 pin_run_as_build:
   curl:
+    max_pin: x
+  fftw:
     max_pin: x
   gdal:
     max_pin: x.x
