--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -10,6 +10,8 @@ channel_targets:
 - conda-forge main
 curl:
 - '7.64'
+fftw:
+- '3'
 gdal:
 - '3.0'
 hdf5:
@@ -28,6 +30,8 @@ macos_min_version:
 - '10.9'
 pin_run_as_build:
   curl:
+    max_pin: x
+  fftw:
     max_pin: x
   gdal:
     max_pin: x.x
