--- a/.ci_support/win_c_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015vc14.yaml
@@ -6,6 +6,8 @@ channel_targets:
 - conda-forge main
 curl:
 - '7.64'
+fftw:
+- '3'
 gdal:
 - '3.0'
 hdf5:
@@ -20,6 +22,8 @@ libnetcdf:
 - 4.7.1
 pin_run_as_build:
   curl:
+    max_pin: x
+  fftw:
     max_pin: x
   gdal:
     max_pin: x.x
