Separate tasks and github_rev and build_version update tasks

--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -16,13 +16,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.1
 
-      # Change Github sha hash and bump version number
-      - name: Update github_rev and build number using yq
+      # Change Github sha hash
+      - name: Update github_rev
         uses: mikefarah/yq@3.3.2
         with:
-          cmd: |
-            yq write --inplace recipe/meta.yaml 'source.github_rev' 123456789
-            yq write --inplace recipe/meta.yaml 'build.number' 1
+          cmd: "yq write --inplace recipe/meta.yaml 'source.github_rev' 123456789"
+
+      # Bump build version number
+      - name: Bump build number
+        uses: mikefarah/yq@3.3.2
+        with:
+          cmd: "yq write --inplace recipe/meta.yaml 'build.number' 1"
 
       # Take a look at recipe/meta.yaml contents
       - name: Check meta.yaml contents
