Remove curly bracket first line to make meta.yaml work with yq

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,6 @@
-{% set version = "6.2.0dev" %}
-
 package:
   name: gmt
-  version: {{ version }}
+  version: 6.2.0dev
 
 source:
   git_url: https://github.com/GenericMappingTools/gmt.git
