--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -16,11 +16,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.1
 
+      # Get latest GMT sha hash from Github
+      - name: Get git revision number
+        id: git_rev_info
+        run: echo ::set-output name=sha::$(git ls-remote https://github.com/GenericMappingTools/gmt HEAD | cut -f 1)
+
       # Change Github sha hash
-      - name: Update github_rev
+      - name: Update git revision number
         uses: mikefarah/yq@3.3.2
         with:
-          cmd: "yq write --inplace recipe/meta.yaml 'source.git_rev' 123456789"
+          cmd: "yq write --inplace recipe/meta.yaml 'source.git_rev' ${{ steps.git_rev_info.outputs.sha }}"
 
       # Bump build version number
       - name: Bump build number
