--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: gmt
-  version: 6.2.0dev
+  version: 6.2.0.dev0+79c89c4
 
 source:
   git_url: https://github.com/GenericMappingTools/gmt.git
