Add GEOS as an explicit runtime dependency (#169)
* Add GEOS as an explicit runtime dependency

* MNT: Re-rendered with conda-build 3.21.4, conda-smithy 3.14.2, and conda-forge-pinning 2021.11.02.20.53.42

* Add geos as a host dependency

Co-authored-by: conda-forge-linter <github-actions@email.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ source:
   sha256: ab7062912aeead1021770fad4756e0a99860fde8ea9b428fb00c22fa15a3bbfc
 
 build:
-  number: 2
+  number: 3
   skip: True  # [win and vc<14]
 
 requirements:
@@ -22,6 +22,7 @@ requirements:
     - liblapack
     - fftw
     - gdal
+    - geos
     - ghostscript
     - libnetcdf
     - hdf5
@@ -36,6 +37,7 @@ requirements:
     - liblapack
     - fftw
     - gdal
+    - geos
     - ghostscript
     - libnetcdf
     - hdf5
