[ci skip] [skip ci] [cf admin skip] ***NO_CI*** admin migration CondaForgeMasterToMain

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -3,5 +3,8 @@ provider:
 conda_forge_output_validation: true
 bot:
   abi_migration_branches:
-   - devel
-   - v5.x
+  - devel
+  - v5.x
+github:
+  branch_name: main
+  tooling_branch_name: main
